--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Official‑Sensitive Secure Email Network</title>
-  <!--
-    Replace the placeholder email addresses and form URL below with your own values
-    before deploying to GitHub Pages.
-  -->
+  <title>Official-Sensitive Protective DNS Network and Official-Sensitive Secure eMail Network</title>
   <style>
     :root {
       --primary:#002d72;      /* dark blue */
@@ -34,7 +30,7 @@
     }
     header h1{
       margin:0;
-      font-size:2rem;
+      font-size:1.8rem;
     }
     main{
       flex:1;
@@ -66,25 +62,24 @@
 </head>
 <body>
   <header>
-    <h1>Official‑Sensitive Secure Email Network</h1>
-    <p>Reliable, encrypted communications across criminal‑justice partners</p>
+    <h1>Official-Sensitive Protective DNS Network and Official-Sensitive Secure eMail Network</h1>
+    <p>Reliable encrypted communications and resilient DNS services</p>
   </header>
   <main>
     <section class="card">
       <h2>Contact Us</h2>
-      <p>For general enquiries about the network please email <a href="mailto:contact@oss-email.gov.uk">contact@oss-email.gov.uk</a>.</p>
+      <p>Need assistance? Email our helpdesk at <a href="mailto:helpdesk@official-sensitive.uk">helpdesk@official-sensitive.uk</a>.</p>
     </section>
 
     <section class="card">
       <h2>Apply for an Account</h2>
-      <p>If your organisation handles Official‑Sensitive material and would like to join, email our onboarding team at <a href="mailto:apply@oss-email.gov.uk">apply@oss-email.gov.uk</a>.</p>
-      <p>You will be asked to complete a short application form confirming your security posture and intended use case.</p>
-      <p><a href="https://example.com/oss-enrolment-form" target="_blank" rel="noopener">Go to the application form ↗</a></p>
+      <p>Organisations requiring access should email <a href="mailto:apply@official-sensitive.uk">apply@official-sensitive.uk</a> to begin the onboarding process.</p>
+      <p><em>Online application form coming soon.</em></p>
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 Official‑Sensitive Secure Email Network</p>
-    <p><small>Protective Marking: OFFICIAL‑SENSITIVE</small></p>
+    <p>&copy; 2025 Official-Sensitive Networks</p>
+    <p><small>Protective Marking: NOT PROTECTIVELY MARKED</small></p>
   </footer>
 </body>
 </html>
